# wasp_cht2_catkin

./: .gitignore  README.md  problem.pddl
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/tum_ardrone/: SetInitialReachDistanceRequest.h  SetInitialReachDistanceResponse.h  SetMaxControlRequest.h  SetMaxControlResponse.h  SetReferenceRequest.h  SetReferenceResponse.h  SetStayTimeRequest.h  SetStayTimeResponse.h  SetStayWithinDistanceRequest.h  SetStayWithinDistanceResponse.h  filter_state.h
devel/include/wasp_custom_msgs/: image_point.h  object_loc.h
devel/lib/agitr/: hello  pubvel  set_bg_color  subpose
devel/lib/pkgconfig/: agitr.pc  apriltags.pc  ardrone_tutorials.pc  beginner_tutorials.pc  cvg_sim_gazebo.pc  cvg_sim_gazebo_plugins.pc  cvg_sim_msgs.pc  drone_controller.pc  message_to_tf.pc  object_list.pc  task2_tb_slam.pc  task3_opencv.pc  task3_pcl.pc  tum_ardrone.pc  wasp.pc  wasp_cth2.pc  wasp_custom_msgs.pc  wasp_launch.pc
devel/lib/task3_opencv/: april_tags  tag_filter
devel/lib/task3_pcl/: PCL_ground_removal  PCL_object_clustering  PCL_subsampler  PCL_transform
devel/lib/tum_ardrone/: drone_autopilot  drone_gui  drone_stateestimation
devel/share/agitr/cmake/: agitrConfig.cmake
devel/share/apriltags/cmake/: apriltagsConfig.cmake
devel/share/ardrone_tutorials/cmake/: ardrone_tutorialsConfig.cmake
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
devel/share/cvg_sim_gazebo/cmake/: cvg_sim_gazeboConfig.cmake
devel/share/cvg_sim_gazebo_plugins/cmake/: cvg_sim_gazebo_plugins-msg-extras.cmake  cvg_sim_gazebo_pluginsConfig.cmake
devel/share/cvg_sim_msgs/cmake/: cvg_sim_msgs-msg-paths.cmake  cvg_sim_msgsConfig.cmake
devel/share/drone_controller/cmake/: drone_controllerConfig.cmake
devel/share/message_to_tf/cmake/: message_to_tfConfig.cmake
devel/share/object_list/cmake/: object_listConfig.cmake
devel/share/task2_tb_slam/cmake/: task2_tb_slamConfig.cmake
devel/share/wasp/cmake/: waspConfig.cmake
install/: .rosinstall  _setup_util.py  setup.sh
install/include/planner/: drone_command.h  turtle_command.h
install/include/wasp_custom_msgs/: image_point.h  object_loc.h
install/lib/drone/: pid2plant.py  plant2pid.py
install/lib/pkgconfig/: apriltags.pc  ardrone_tutorials.pc  beginner_tutorials.pc  drone.pc  planner.pc  task2_tb_slam.pc  task3_opencv.pc  task3_pcl.pc  wasp_cth2.pc  wasp_custom_msgs.pc  wasp_launch.pc
install/share/drone/: package.xml
install/share/wasp_launch/: package.xml
misc/: script2016-10-27-lines.txt  script2016-10-27-narration.txt  script2016-10-27.txt
runScripts/: goToDepo.py  goToInit.py  pubOdom.py  runDroneController.sh  setpid.sh
src/: .gitignore  CMakeLists.txt  challenge_map.pgm  challenge_map.yaml
src/beginner_tutorials/: package.xml
src/drone/: CMakeLists.txt  manifest.xml
src/drone/src/: pid2plant.py  plant2pid.py  uiscript.py
src/drone_tf/: CMakeLists.txt  package.xml
src/drone_tf/launch/: drone_tags.launch  drone_tf.launch  test_drone.launch  test_drone_tags.launch
src/drone_tf/src/: apriltag_rviz_markers.cpp  apriltag_tf_broadcaster.cpp  apriltag_tf_listener.cpp  apriltag_victim.cpp  drone2slam_tf_broadcaster.cpp  drone_rviz_markers.cpp  slam_tf_broadcaster.cpp  slam_tf_listener.cpp
src/follower/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/follower/catkin_generated/: planner-msg-extras.cmake.develspace.in
src/follower/cmake/: planner-genmsg.cmake
src/follower/msg/: polar_coordinates.msg
src/follower/scripts/: room_scanner.py  sensor.py  turtle.py
src/follower/stage/: turtlebot_in_stage.launch
src/planner/: CMakeLists.txt  drone_calibration_front.ini  package.xml
src/planner/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/planner/cmake/: planner-genmsg-context.py
src/planner/msg/: drone_command.msg  turtle_command.msg
src/planner/scripts/: #turtle.py#  bestplan  domain.pddl  drone.py  drone_manual.py  dummy_drone.py  dummy_turtle.py  generateProblem.py  plan  planning.py  planningProperties.py  problem.pddl  problem2.pddl  room_scanner.py  scheduler.py  settings.json  settings2.json  settings3.json  settings_16-12-08.json  settings_final_session.json  settings_final_session_predefined areas.json  turtle.py  yahsp3
src/skynet/: CMakeLists.txt  package.xml
src/skynet/src/: code.py  generatePlan.py  view.py
src/task2_tb_slam/src/: tb_rviz_interaction.py
src/task3_opencv/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/task3_opencv/src/: april_tag_detection.bak.cpp  april_tag_detection.cpp  april_tag_detection.cpp~  filewriter.py  pid2plant_frontcontroller.py  shape_detection.py  shape_detection_working.py  shape_front.py  tag_filter.cpp  tag_filter.cpp~
src/wasp_cth2/: CMakeLists.txt  package.xml
src/wasp_cth2/launch/: drone.launch
src/wasp_custom_msgs/: CMakeLists.txt  CMakeLists.txt~
src/wasp_custom_msgs/msg/: image_point.msg~  object_loc.msg~
src/wasp_launch/: CMakeLists.txt  drone.launch  drone.launch~  pidController.launch  pidOnly.launch  test_drone.launch~  test_pid2plant.launch  test_pid2plant.launch~
web.py/: code.py  generatePlan.py  view.py
web.py/templates/: index.html
(+57 files in other folders)
